[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wa-providers"
version = "0.5.0"
description = "WhatsApp agnostico (Evolution + WhatsApp Cloud API) detras de una interfaz comun, con cliente httpx pooled y reintentos con backoff."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.5",
    "twine>=5.1",
]

[tool.hatch.build.targets.wheel]
packages = ["wa_providers"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff]
line-length = 100
